--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+* 0.2.0
+
+* Added support for 2D barcodes
+* Updated all outputters to support 2D barcodes
+* Added support for QR Code
+
 * 0.1.2
 
 * Added CairoOutputter [Kouhei Sutou]
