--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+* 0.4.0
+
+* Can you tell I'm just making up version numbers as I go along?
+* DataMatrix (not required automatically, requires the 'semacode' gem)
+* Refactored PrawnOutputter a little. No more stupid options hashes + unbleed attribute
+
 * 0.3.2
 
 * Fix bug where Code128 extras choke on newlines [Wayne Conrad]
