--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+* 0.4.1
+
+* ChunkyPngOutputter - ChunkyPNG is a pure-Ruby PNG library
+
 * 0.4.0
 
 * Can you tell I'm just making up version numbers as I go along?
