--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+* 0.4.3
+
+* 2- and 5-digit UPC supplements
+* Use ChunkyPNG for PngOutputter
+
 * 0.4.2
 
 * ChunkyPngOutputter now renders 2D barcodes not upside down [Thanks Scient]
