--- a/README
+++ b/README
@@ -1,10 +1,14 @@
-Barby is a Ruby barcode generator. It is easily extendable.
+Barby is a Ruby library that generates barcodes in a variety of symbologies.
+Its functionality is split into barcode and "outputter" objects. Barcode
+objects turn data into a binary representation for a given symbology.
+Outputters then take this representation and turns it into images, PDF, etc.
 
-The barcode objects are separated from the process of generating graphical
-(or other) representations. A barcode's only responsibility is to provide
-a string representation consisting of 1s and 0s representing bars and spaces.
-This string can then be used to generate (for example) an image with the
-RMagickOutputter, or an ASCII string such as the one below.
+You can easily add a symbology without having to worry about graphical
+representation. If it can be represented as the usual 1D or 2D matrix of
+lines or squares, outputters will do that for you.
+
+Likewise, you can easily add an outputter for a format that doesn't have one
+yet, and it will work with all existing symbologies.
 
 See Barby::Barcode and Barby::Outputter for more information.
 
@@ -13,7 +17,7 @@ See Barby::Barcode and Barby::Outputter for more information.
 
  barcode = Barby::Code128B.new('BARBY')
  
- puts barcode.to_ascii
+ puts barcode.to_ascii #Implicitly uses the AsciiOutputter
 
  ## #    #  #   # ##   # #   ##   ##   # ### #   # ##   ### ## #   ## ### ### ##   ### # ##
  ## #    #  #   # ##   # #   ##   ##   # ### #   # ##   ### ## #   ## ### ### ##   ### # ##
@@ -25,4 +29,23 @@ See Barby::Barcode and Barby::Outputter for more information.
  ## #    #  #   # ##   # #   ##   ##   # ### #   # ##   ### ## #   ## ### ### ##   ### # ##
  ## #    #  #   # ##   # #   ##   ##   # ### #   # ##   ### ## #   ## ### ### ##   ### # ##
  ## #    #  #   # ##   # #   ##   ##   # ### #   # ##   ### ## #   ## ### ### ##   ### # ##
-            B          A          R          B          Y                                  
+            B          A          R          B          Y
+
+Supported symbologies:
+
+* Code 25
+  * Interleaved
+  * IATA
+* Code 39
+* Code 93
+* Code 128
+  * GS1 128
+* EAN-13
+  * Bookland
+  * UPC-A
+* EAN-8
+* UPC/EAN supplemental, 2 & 5 digits
+
+* QR Code
+* DataMatrix (Semacode)
+* PDF417 (requires JRuby)
