update readme to point to has_barcode - a user of the little wrapper I wrote suggested I issue a pull request to reference the wrapper in barby. Thanks for the library!

--- a/README
+++ b/README
@@ -89,3 +89,5 @@ require 'barby/outputter/<filename>_outputter'
 * prawn (prawn)
 * rmagick (RMagick)
 * svg
+
+There is a convenience wrapper/module you can use at https://www.github.com/dpickett/has_barcode
