--- a/README
+++ b/README
@@ -42,6 +42,18 @@ See Barby::Barcode and Barby::Outputter for more information.
  ## #    #  #   # ##   # #   ##   ##   # ### #   # ##   ### ## #   ## ### ### ##   ### # ##
             B          A          R          B          Y
 
+***
+
+Another simple example using chunky_png :
+
+ require 'barby'
+ require 'barby/barcode/code_25_interleaved'
+ require 'barby/outputter/png_outputter'
+
+ barcode = Barby::Code25Interleaved.new('28041010110012')
+ outputter = Barby::PngOutputter.new(barcode) #on this object ypu can set width and height
+ File.open('test.png', 'w') {|f| f.write(o.to_png)} #write to disk
+
 
 Supported symbologies:
 
